metadata/force-app/main/default/objects/CustomName_iyRyf__c/CustomName_iyRyf__c.object-meta.xml
<CustomObject>
    <description>Description_xiPsd</description>
    <label>CustomLabel_ByArg</label>
    <nameField>
        <label>CustomLabel_ByArg</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ByArgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>