metadata/force-app/main/default/objects/CustomName_iyRyf__c/fields/CustomField_mLDJC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mLDJC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkzBIc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>